# Langlands

./: CHANGELOG.md  Langlands.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.1/: Langlands-0.1.0.0-inplace.conf  package.cache
src/: Tokenising.hs
src/Syntax/: AST.hs  Token.hs
