cabal-version:      3.4
name:               Langlands
version:            0.1.0.0


-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:            BSD-3-Clause
author:             zypeh
maintainer:         zypeh@users.noreply.github.com

-- A copyright notice.
-- copyright:
category:           language
extra-source-files: CHANGELOG.md

common haskell
    default-language: GHC2021
    default-extensions:
        LambdaCase
        OverloadedStrings

    ghc-options:
        -Wall
        -funbox-strict-fields

    if (impl(ghc >= 8.8))
        ghc-options:
            -Wno-missing-deriving-strategies

    if (impl(ghc >= 8.10))
        ghc-options:
            -Wno-missing-safe-haskell-mode
            -Wno-prepositive-qualified-module

executable Langlands
    import: haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.0.0
    hs-source-dirs:   app

library
    import: haskell
    hs-source-dirs: src
    exposed-modules:
        Common
        Tokenising
        Syntax.AST


    other-modules: Paths_Langlands
    build-depends: base
                 , bytestring
                 , containers
                 , flatparse
                 , srcloc
                 , template-haskell
